--- a/html/vertical-menu-template-no-customizer/dashboards-analytics.html
+++ b/html/vertical-menu-template-no-customizer/dashboards-analytics.html
@@ -2,9 +2,9 @@
 
 <html
   lang="en"
-  class="light-style layout-navbar-fixed layout-menu-fixed"
+  class="dark-style layout-navbar-fixed layout-menu-fixed"
   dir="ltr"
-  data-theme="theme-default"
+  data-theme="theme-default-dark"
   data-assets-path="../../assets/"
   data-template="vertical-menu-template-no-customizer">
   <head>
