--- a/html/vertical-menu-template-no-customizer/dashboards-analytics.html
+++ b/html/vertical-menu-template-no-customizer/dashboards-analytics.html
@@ -2,7 +2,7 @@
 
 <html
   lang="en"
-  class="dark-style layout-navbar-fixed layout-menu-fixed"
+  class="light-style layout-navbar-fixed layout-menu-fixed"
   dir="ltr"
   data-theme="theme-default-dark"
   data-assets-path="../../assets/"
