--- a/php/access_denied.html
+++ b/php/access_denied.html
@@ -4,7 +4,7 @@
   lang="en"
   class="light-style customizer-hide"
   dir="ltr"
-  data-theme="theme-default"
+  data-theme="theme-default-dark"
   data-assets-path="../../assets/"
   data-template="vertical-menu-template-no-customizer">
   <head>
@@ -33,8 +33,8 @@
     <link rel="stylesheet" href="../../assets/vendor/fonts/flag-icons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="../../assets/vendor/css/rtl/core.css" />
-    <link rel="stylesheet" href="../../assets/vendor/css/rtl/theme-default.css" />
+    <link rel="stylesheet" href="../../assets/vendor/css/rtl/core-dark.css" />
+    <link rel="stylesheet" href="../../assets/vendor/css/rtl/theme-default-dark.css" />
     <link rel="stylesheet" href="../../assets/css/demo.css" />
 
     <!-- Vendors CSS -->
