--- a/php/access_denied.html
+++ b/php/access_denied.html
@@ -63,7 +63,7 @@
           Vous n'êtes pas autorisé à afficher cette page en utilisant les informations d'identification que vous avez fournies lors de la connexion.  <br />
           Merci de contacter l'administrateur de votre site si ce n'est pas normal.
         </p>
-        <a href="/index.php" class="btn btn-primary">Revenir au Tableau de bord</a>
+        <a href="/index.php" class="btn btn-primary">Tableau de bord</a>
         <div class="mt-5">
         </div>
       </div>
